Address feedback Ruben V. Make more concise

--- a/content/references.bib
+++ b/content/references.bib
@@ -165,6 +165,7 @@ publisher={Emerald Publishing Limited}
 @inproceedings{neumann2011characteristic,
   title={Characteristic sets: Accurate cardinality estimation for RDF queries with multiple joins},
   author={Neumann, Thomas and Moerkotte, Guido},
+  booktitle={ICDE},
   year={2011}
 }
 
@@ -209,8 +210,7 @@ publisher={Emerald Publishing Limited}
 @inproceedings{dang2023fedshop,
   title={FedShop: A Benchmark for Testing the Scalability of SPARQL Federation Engines},
   author={Dang, Minh-Hoang and Aimonier-Davat, Julien and Molli, Pascal and Hartig, Olaf and Skaf-Molli, Hala and Le Crom, Yotlan},
-  booktitle={International Semantic Web Conference},
-  pages={285--301},
+  booktitle.bak={ISWC},
   year={2023},
   organization={Springer}
 }
@@ -265,8 +265,7 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{taelman2018comunica,
   title={Comunica: a modular SPARQL query engine for the web},
   author={Taelman, Ruben and Van Herwegen, Joachim and Vander Sande, Miel and Verborgh, Ruben},
-  booktitle={The Semantic Web--ISWC 2018: 17th International Semantic Web Conference, Monterey, CA, USA, October 8--12, 2018, Proceedings, Part II 17},
-  pages={239--255},
+  booktitle={ISWC},
   year={2018},
   organization={Springer}
 }
