--- a/content/references.bib
+++ b/content/references.bib
@@ -64,16 +64,14 @@ publisher={Emerald Publishing Limited}
 @inproceedings{hartig2009executing,
   title={Executing SPARQL queries over the web of linked data},
   author={Hartig, Olaf and Bizer, Christian and Freytag, Johann-Christoph},
-  booktitle={The Semantic Web-ISWC 2009: 8th International Semantic Web Conference, ISWC 2009, Chantilly, VA, USA, October 25-29, 2009. Proceedings 8},
-  pages={293--309},
+  booktitle={ISWC},
   year={2009},
-  organization={Springer}
 }
 
 @inproceedings{hartig2012foundations,
   title={Foundations of traversal based query execution over linked data},
   author={Hartig, Olaf and Freytag, Johann-Christoph},
-  booktitle={Proceedings of the 23rd ACM conference on Hypertext and social media},
+  booktitle={ACM Hypertext Conferenceand social media},
   pages={43--52},
   year={2012}
 }
@@ -89,8 +87,7 @@ publisher={Emerald Publishing Limited}
 @inproceedings{hartig2011zero,
   title={Zero-knowledge query planning for an iterator implementation of link traversal based query execution},
   author={Hartig, Olaf},
-  booktitle={Extended Semantic Web Conference},
-  pages={154--169},
+  booktitle={ESWC},
   year={2011},
   organization={Springer}
 }
@@ -174,12 +171,14 @@ publisher={Emerald Publishing Limited}
   title={A Demonstration of the {Solid} platform for Social Web Applications},
   author={Mansour, Essam and Sambra, Andrei Vlad and Hawke, Sandro and Zereba, Maged and Capadisli, Sarven and Ghanem, Abdurrahman and Aboulnaga, Ashraf and Berners-Lee, Tim},
   year={2016},
+  booktitle={WWW},
   organization.bak={International World Wide Web Conferences Steering Committee}
 }
 
 @inproceedings{mastodon,
-  title={Follow the \enquote{Mastodon}: Structure and Evolution of a Decentralized Online Social Network},
+  title={Follow the Mastodon: Structure and Evolution of a Decentralized Online Social Network},
   author={Zignani, Matteo and Gaito, Sabrina and Rossi, Gian Paolo},
+  booktitle={AAAI ICWSM},
   year={2018}
 }
 
@@ -188,7 +187,7 @@ publisher={Emerald Publishing Limited}
   title = {Semantic micro-contributions with decentralized nanopublication services},
   year = {2021}
 }
-@misc{Verborgh_2020, title={A Data Ecosystem Fosters Sustainable Innovation}, url={https://ruben.verborgh.org/blog/2020/12/07/a-data-ecosystem-fosters-sustainable-innovation/}, journal={Ruben Verborgh’s Personal Website}, author={Verborgh, Ruben}, year={2020}} 
+@misc{Verborgh_2020, title={A Data Ecosystem Fosters Sustainable Innovation}, journal={Ruben Verborgh’s Personal Website}, author={Verborgh, Ruben}, year={2020}} 
 
 @article{beckett2004rdf,
   title={RDF/XML syntax specification (revised)},
@@ -210,7 +209,7 @@ publisher={Emerald Publishing Limited}
 @inproceedings{dang2023fedshop,
   title={FedShop: A Benchmark for Testing the Scalability of SPARQL Federation Engines},
   author={Dang, Minh-Hoang and Aimonier-Davat, Julien and Molli, Pascal and Hartig, Olaf and Skaf-Molli, Hala and Le Crom, Yotlan},
-  booktitle.bak={ISWC},
+  booktitle={ISWC},
   year={2023},
   organization={Springer}
 }
@@ -287,12 +286,14 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{taelman2023link,
   title={Link traversal query processing over decentralized environments with structural assumptions},
   author={Taelman, Ruben and Verborgh, Ruben},
+  booktitle={ISWC},
   year={2023},
 }
 
 @inproceedings{hartig2013squin,
   title={SQUIN: a traversal based query execution system for the web of linked data},
   author={Hartig, Olaf},
+  booktitle={SIGMOD},
   year={2013}
 }
 
@@ -305,6 +306,7 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{hartig2016walking,
   title={Walking without a map: Ranking-based traversal for querying linked data},
   author={Hartig, Olaf and {\"O}zsu, M Tamer},
+  booktitle={ISWC},
   year={2016},
 }
 
@@ -390,6 +392,7 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{acosta2017diefficiency,
   title={Diefficiency metrics: measuring the continuous efficiency of query processing approaches},
   author={Acosta, Maribel and Vidal, Maria-Esther and Sure-Vetter, York},
+  booktitle={ISWC},
   year={2017},
 }
 
@@ -449,6 +452,7 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{zhang2016secf,
   title={SECF: Improving SPARQL querying performance with proactive fetching and caching},
   author={Zhang, Wei Emma and Sheng, Quan Z and Qin, Yongrui and Yao, Lina and Shemshadi, Ali and Taylor, Kerry},
+  booktitle={Annual ACM Symposium on Applied Computing},
   year={2016}
 }
 
@@ -485,18 +489,21 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{yu2020reinforcement,
   title={Reinforcement learning with tree-lstm for join order selection},
   author={Yu, Xiang and Li, Guoliang and Chai, Chengliang and Tang, Nan},
+  booktitle={ICDE},
   year={2020},
 }
 
 @inproceedings{marcus2021bao,
   title={Bao: Making learned query optimization practical},
   author={Marcus, Ryan and Negi, Parimarjan and Mao, Hongzi and Tatbul, Nesime and Alizadeh, Mohammad and Kraska, Tim},
+  booktitle={Proceedings of the 2021 International Conference on Management of Data},
   year={2021}
 }
 
 @inproceedings{eschauzier2023reinforcement,
   title={Reinforcement Learning-Based SPARQL Join Ordering Optimizer},
   author={Eschauzier, Ruben and Taelman, Ruben and Morren, Meike and Verborgh, Ruben},
+  booktitle={ESWC},
   year={2023}
 }
 
@@ -557,13 +564,14 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{papailiou2015graph,
   title={Graph-aware, workload-adaptive SPARQL query caching},
   author={Papailiou, Nikolaos and Tsoumakos, Dimitrios and Karras, Panagiotis and Koziris, Nectarios},
+  booktitle={SIGMOD},
   year={2015}
 }
 
 @inproceedings{madkour2018worq,
   title={Worq: Workload-driven rdf query processing},
   author={Madkour, Amgad and Aly, Ahmed M and Aref, Walid G},
-  booktitle={The Semantic Web--ISWC 2018: 17th International Semantic Web Conference, Monterey, CA, USA, October 8--12, 2018, Proceedings, Part I 17},
+  booktitle={ISWC},
   year={2018}
 }
 
@@ -576,6 +584,7 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{aebeloe2019decentralized,
   title={Decentralized indexing over a network of RDF peers},
   author={Aebeloe, Christian and Montoya, Gabriela and Hose, Katja},
+  booktitle={ISWC},
   year={2019},
 }
 
@@ -595,7 +604,25 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{adar2008large,
   title={Large scale analysis of web revisitation patterns},
   author={Adar, Eytan and Teevan, Jaime and Dumais, Susan T},
-  booktitle={Proceedings of the SIGCHI conference on Human Factors in Computing Systems},
-  pages={1197--1206},
+  booktitle={SIGCHI conference on Human Factors in Computing Systems},
   year={2008}
+}
+
+@inproceedings{heling2020estimating,
+  title={Estimating characteristic sets for RDF dataset profiles based on sampling},
+  author={Heling, Lars and Acosta, Maribel},
+  booktitle={ESWC},
+  year={2020},
+}
+
+@article{schwabe2023cardinality,
+  title={Cardinality Estimation over Knowledge Graphs with Embeddings and Graph Neural Networks},
+  author={Schwabe, Tim and Acosta, Maribel},
+  year={2023}
+}
+
+@article{davitkova2021lmkg,
+  title={LMKG: Learned Models for Cardinality Estimation in Knowledge Graphs},
+  author={Davitkova, Angjela and Gjurovski, Damjan and Michel, Sebastian},
+  year={2021}
 }
