Shorten and rework content

--- a/content/references.bib
+++ b/content/references.bib
@@ -175,13 +175,6 @@ publisher={Emerald Publishing Limited}
   organization.bak={International World Wide Web Conferences Steering Committee}
 }
 
-@inproceedings{mastodon,
-  title={Follow the Mastodon: Structure and Evolution of a Decentralized Online Social Network},
-  author={Zignani, Matteo and Gaito, Sabrina and Rossi, Gian Paolo},
-  booktitle={AAAI ICWSM},
-  year={2018}
-}
-
 @article{decentralizednanopubs,
   author = {Kuhn, Tobias and Taelman, Ruben and Emonet, Vincent and Antonatos, Haris and Soiland-Reyes, Stian and Dumontier, Michel},
   title = {Semantic micro-contributions with decentralized nanopublication services},
@@ -496,7 +489,7 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{marcus2021bao,
   title={Bao: Making learned query optimization practical},
   author={Marcus, Ryan and Negi, Parimarjan and Mao, Hongzi and Tatbul, Nesime and Alizadeh, Mohammad and Kraska, Tim},
-  booktitle={Proceedings of the 2021 International Conference on Management of Data},
+  booktitle={SIGMOD},
   year={2021}
 }
 
@@ -597,7 +590,6 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
 @inproceedings{marcus2018deep,
   title={Deep reinforcement learning for join order enumeration},
   author={Marcus, Ryan and Papaemmanouil, Olga},
-  booktitle={Proceedings of the First International Workshop on Exploiting Artificial Intelligence Techniques for Data Management},
   year={2018}
 }
 
@@ -621,8 +613,3 @@ title={SPARQL 1.1 Query Language}, url={https://www.w3.org/TR/sparql11-query/}, 
   year={2023}
 }
 
-@article{davitkova2021lmkg,
-  title={LMKG: Learned Models for Cardinality Estimation in Knowledge Graphs},
-  author={Davitkova, Angjela and Gjurovski, Damjan and Michel, Sebastian},
-  year={2021}
-}
